fix image stretching for bigger tiles

--- a/src/app/shop-tile/shop-tile.component.scss
+++ b/src/app/shop-tile/shop-tile.component.scss
@@ -27,8 +27,8 @@
       height: 60px;
 
       img.icon {
-        width: 100%;
-        height: 100%;
+        max-width: 100%;
+        max-height: 100%;
         border-radius: 100%;
       }
     }
